Fix aria labels for navigations

--- a/index.html
+++ b/index.html
@@ -53,10 +53,26 @@
 
             <nav id="mobile-menu">
                 <ul>
-                    <li><a href="#about">Обо мне</a></li>
-                    <li><a href="#services">Формат работы</a></li>
-                    <li><a href="#testimonials">Отзывы</a></li>
-                    <li><a href="#contact">Контакт</a></li>
+                    <li>
+                        <a href="#about" aria-label="Go to about section">
+                            Обо мне
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#services" aria-label="Go to services section">
+                            Формат работы
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#testimonials" aria-label="Go to testimonials section">
+                            Отзывы
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#contact" aria-label="Go to contact section">
+                            Контакт
+                        </a>
+                    </li>
                 </ul>
             </nav>
         </div>
@@ -441,11 +457,21 @@
         <div class="container footer-inner">
             <div>© 2025 Стук сердца by Suria</div>
             <div class="footer-nav">
-                <a href="#top">Вверх</a>
-                <a href="#about">Обо мне</a>
-                <a href="#services">Формат работы</a>
-                <a href="#services">Отзывы</a>
-                <a href="#contact">Контакт</a>
+                <a href="#top" aria-label="Go to top of the page">
+                    Вверх
+                </a>
+                <a href="#about" aria-label="Go to about section">
+                    Обо мне
+                </a>
+                <a href="#services" aria-label="Go to services section">
+                    Формат работы
+                </a>
+                <a href="#services" aria-label="Go to services section">
+                    Отзывы
+                </a>
+                <a href="#contact" aria-label="Go to contact section">
+                    Контакт
+                </a>
             </div>
         </div>
     </footer>
