Change all images

--- a/meditations.html
+++ b/meditations.html
@@ -204,7 +204,7 @@
                 <div class="med-card-grid">
                     <article class="med-card">
                         <figure class="med-card-figure">
-                            <img src="assets/images/meditations-images/letting-go-of-anxious-thoughts-meditation-image.jpg"
+                            <img src="assets/images/meditations-images/letting-go-of-anxious-thoughts-meditation-image-focus.png"
                                 alt="Мягкая медитация для успокоения тревоги и навязчивых мыслей"
                                 class="med-card-image">
                         </figure>
@@ -226,7 +226,7 @@
                     <!-- Отпускаю контроль -->
                     <article class="med-card">
                         <figure class="med-card-figure">
-                            <img src="assets/images/meditations-images/letting-go-of-control-meditation-image.jpg"
+                            <img src="assets/images/meditations-images/letting-go-of-control-meditation-image-focus.png"
                                 alt="Медитация для отпускания контроля и тревоги о будущем" class="med-card-image">
                         </figure>
                         <h3 class="med-card-title">Отпускаю контроль</h3>
@@ -247,7 +247,7 @@
                     <!-- Опора внутри меня (как одиночная версия, если продаётся отдельно) -->
                     <article class="med-card">
                         <figure class="med-card-figure">
-                            <img src="assets/images/meditations-images/inner-support-meditation-image.jpg"
+                            <img src="assets/images/meditations-images/inner-support-meditation-image-focus.png"
                                 alt="Медитация для возвращения внутренней опоры и уверенности" class="med-card-image">
                         </figure>
                         <h3 class="med-card-title">Опора внутри меня</h3>
@@ -267,7 +267,7 @@
                     <!-- Защита рода -->
                     <article class="med-card">
                         <figure class="med-card-figure">
-                            <img src="assets/images/meditations-images/family-protection-meditation-image.jpg"
+                            <img src="assets/images/meditations-images/family-protection-meditation-image-focus.png"
                                 alt="Медитация для включения родовой защиты" class="med-card-image">
                         </figure>
                         <h3 class="med-card-title">Защита рода</h3>
@@ -287,7 +287,7 @@
                     <!-- Баланс энергии -->
                     <article class="med-card">
                         <figure class="med-card-figure">
-                            <img src="assets/images/meditations-images/energy-balance-meditation-image.jpg"
+                            <img src="assets/images/meditations-images/energy-balance-meditation-image-focus.png"
                                 alt="Медитация для восстановления баланса энергии" class="med-card-image">
                         </figure>
                         <h3 class="med-card-title">Баланс энергии</h3>
@@ -306,7 +306,7 @@
                     <!-- Освободи голову и тело -->
                     <article class="med-card">
                         <figure class="med-card-figure">
-                            <img src="assets/images/meditations-images/free-mind-and-body-meditation-image.jpg"
+                            <img src="assets/images/meditations-images/free-mind-and-body-meditation-image-focus.png"
                                 alt="Медитация для очищения от негатива и тяжёлых эмоций других людей"
                                 class="med-card-image">
                         </figure>
@@ -329,7 +329,7 @@
                     <!-- Разрыв кармической связи -->
                     <article class="med-card">
                         <figure class="med-card-figure">
-                            <img src="assets/images/meditations-images/breaking-karmic-ties-meditation-image.jpg"
+                            <img src="assets/images/meditations-images/breaking-karmic-ties-meditation-image-focus.png"
                                 alt="Медитация для разрыва болезненной кармической связи" class="med-card-image">
                         </figure>
                         <h3 class="med-card-title">Разрыв кармической связи</h3>
@@ -349,7 +349,7 @@
                     <!-- Исполнение желания -->
                     <article class="med-card">
                         <figure class="med-card-figure">
-                            <img src="assets/images/meditations-images/wish-fulfillment-meditation-image.jpg"
+                            <img src="assets/images/meditations-images/wish-fulfillment-meditation-image-focus.png"
                                 alt="Медитация для открытия сердца и притяжения новой любви" class="med-card-image">
                         </figure>
                         <h3 class="med-card-title">Исполнение желания</h3>
@@ -367,7 +367,7 @@
                     <!-- Гармония внутри себя -->
                     <article class="med-card">
                         <figure class="med-card-figure">
-                            <img src="assets/images/meditations-images/harmony-inside-me-meditation-image.jpg"
+                            <img src="assets/images/meditations-images/harmony-inside-me-meditation-image-focus.png"
                                 alt="Медитация для восстановления внутренней гармонии" class="med-card-image">
                         </figure>
                         <h3 class="med-card-title">Гармония внутри себя</h3>
@@ -387,7 +387,7 @@
                     <!-- Отпустить боль прошлого -->
                     <article class="med-card">
                         <figure class="med-card-figure">
-                            <img src="assets/images/meditations-images/let-go-of-the-pain-from-the-past-meditation-image.jpg"
+                            <img src="assets/images/meditations-images/let-go-of-the-pain-from-the-past-meditation-image-focus.png"
                                 alt="Медитация для отпускания боли прошлого и обид" class="med-card-image">
                         </figure>
                         <h3 class="med-card-title">Отпустить боль прошлого</h3>
