Change free meditation image

--- a/meditations.html
+++ b/meditations.html
@@ -91,7 +91,7 @@
                 <div class="med-free-card">
                     <div class="med-free-label">Подарок от Сурии</div>
                     <div class="med-free-figure">
-                        <img src="assets/images/meditations-images/awakening-of-femininity-meditation-free-image.jpg"
+                        <img src="assets/images/meditations-images/awakening-of-femininity-meditation-free-image-focus.png"
                             alt="Нежный образ Сурии в женственной энергии" class="med-free-image">
                     </div>
                     <p class="med-free-quote">
