Fix focus on link

--- a/meditations.html
+++ b/meditations.html
@@ -74,18 +74,14 @@
                     <p class="med-free-badge">Бесплатная медитация</p>
                     <h2 class="section-title">Медитация «Пробуждение женственности»</h2>
                     <p class="med-free-lead">
-                        Милые, эта медитация — мягкое приглашение вспомнить о себе, своей нежности и природе
-                        женственности.
-                        Наденьте наушники, закройте глаза и позвольте себе просто быть.
+                        Когда вы всё время в режиме «надо» и «должна», внутренняя мягкость куда-то уходит. Эта медитация
+                        помогает выдохнуть, снять напряжение и вспомнить, каково это быть нежной, расслабленной,
+                        женственной.
                     </p>
                     <p class="med-free-body">
-                        Где-то глубоко внутри уже живёт источник вашей любви к себе. В этой практике вы мягко
-                        прикасаетесь к нему, наполняетесь гармонией и позволяете своей женственности сиять —
-                        без ожиданий и требований, только с принятием и теплом.
+                        Не роботом, который тащит всё на себе, а женщиной, которая позволяет себе просто
+                        быть.
                     </p>
-                    <!-- <a href="#contact" class="btn-primary">
-                        Забрать бесплатную версию
-                    </a> -->
                 </div>
 
                 <div class="med-free-card">
