Fix meditation description

--- a/meditations.html
+++ b/meditations.html
@@ -206,12 +206,10 @@
                         </figure>
                         <h3 class="med-card-title">Отпустить тревожность и навязчивые мысли</h3>
                         <p class="med-card-text">
-                            Когда поток мыслей не останавливается, в голове одно и то же, страхи о будущем и «а вдруг
-                            всё пойдёт не так».
-                            Медитация помогает успокоить ум и тело, перестать крутить ситуации и наконец выдохнуть.
-                            После прослушивания
-                            внутри становится тише, отпускает напряжение, и вы перестаёте мучить себя бесконечными
-                            мыслями.
+                            Когда в голове бесконечная карусель: одни и те же мысли по кругу, тревога о будущем,
+                            прокручивание прошлого. Эта медитация помогает остановить этот поток, успокоить голову и
+                            тело, наконец выдохнуть. После прослушивания становится тихо внутри, и вы перестаёте мучить
+                            себя тем, что не даёт покоя.
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
@@ -227,12 +225,10 @@
                         </figure>
                         <h3 class="med-card-title">Отпускаю контроль</h3>
                         <p class="med-card-text">
-                            Когда ум бесконечно анализирует: почему он не позвонил, что имел в виду, что будет дальше.
-                            Медитация помогает
-                            отпустить это состояние, перестать цепляться за то, что вы не можете изменить, и позволить
-                            жизни течь.
-                            После прослушивания мысли стихает, приходит спокойствие и ощущение присутствия «здесь и
-                            сейчас».
+                            Если вы постоянно прокручиваете: почему он так сказал, что имел в виду, а что будет если...
+                            это контроль. Ум держит прошлое и будущее, а жить в настоящем не получается. Эта медитация
+                            помогает разжать хватку, перестать цепляться за то, что нельзя изменить, и начать
+                            чувствовать жизнь здесь и сейчас.
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
@@ -248,11 +244,10 @@
                         </figure>
                         <h3 class="med-card-title">Опора внутри меня</h3>
                         <p class="med-card-text">
-                            Когда кажется, что больше не на что опереться и все опоры снаружи ломаются. Практика
-                            возвращает контакт
-                            с собой, ощущение уверенности и внутреннего стержня. После прослушивания уходит ощущение
-                            пустоты, появляется
-                            спокойствие и чувство, что вы можете положиться на себя.
+                            Когда кажется, что всё рушится, а держаться не за что, эта медитация помогает собрать себя
+                            изнутри. Она возвращает спокойствие, уверенность и чувство, что вы можете опереться на себя,
+                            без ожиданий от других. После прослушивания исчезает растерянность, появляется внутренний
+                            стержень и ощущение, что вы снова стоите на ногах.
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
@@ -268,11 +263,9 @@
                         </figure>
                         <h3 class="med-card-title">Защита рода</h3>
                         <p class="med-card-text">
-                            Родовая защита — самая естественная защита человека. Без ритуалов и сложных обрядов: просто
-                            слушайте
-                            программу, и с каждым разом ваша защита становится сильнее. Медитация помогает не
-                            втягиваться в чужие эмоции,
-                            не забирать на себя негатив и чувствовать за спиной силу рода.
+                            Родовая защита самая естественная защита человека. Без свечей, ритуалов и обрядов. Просто
+                            слушайте, и с каждым разом защита будет крепче. Чужой негатив, зависть, тяжёлые люди всё это
+                            перестаёт пробивать. Вы как за невидимым щитом, за которым стоит сила вашего рода.
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
@@ -286,12 +279,12 @@
                             <img src="assets/images/meditations-images/energy-balance-meditation-image-focus.png"
                                 alt="Медитация для восстановления баланса энергии" class="med-card-image">
                         </figure>
-                        <h3 class="med-card-title">Баланс энергии</h3>
+                        <h3 class="med-card-title">Баланс энергий</h3>
                         <p class="med-card-text">
-                            Гармонизация своей энергии
-                            Когда убрали чужое нужно вернуть своё. Чтобы не ходить, как пустая оболочка. Чтобы не трясло
-                            от любого замечания. Чтобы вернулась к себе в свою энергию в свою опору.
-
+                            После очищения или тяжёлых дней часто остается ощущение пустоты, как будто всё лишнее
+                            убрали, а сил всё равно нет. Эта медитация помогает собрать себя обратно, вернуть внутреннюю
+                            устойчивость. После прослушивания чувствуется спокойствие, уверенность и ощущение, что вы
+                            снова «в себе», на своём месте.
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
@@ -308,13 +301,10 @@
                         </figure>
                         <h3 class="med-card-title">Освободи голову и тело</h3>
                         <p class="med-card-text">
-                            Сброс перегруза: освободи голову и тело
-
-                            Представь: вечер, ты наконец дома. Снимаешь обувь, падаешь на диван и вдруг понимаешь, что
-                            внутри всё ещё напряжено. Плечи как деревянные, в голове крутится весь день, а в груди
-                            тяжёлый комок. Знакомо до боли, правда? Приходишь вечером домой и внутри всё кипит или,
-                            наоборот, как будто батарейка на нуле.
-
+                            Чтобы убрать из себя всю чужую энергию: от косых взглядов, зависти, обид на вас, сглазов,
+                            злости и тяжести после общения с негативными людьми. Всё, что налипает и тянет вниз. После
+                            прослушивания чувствуете, будто с души сняли слой грязи дышится легко, тело расслабляется, а
+                            внутри тишина и покой.
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
@@ -330,11 +320,10 @@
                         </figure>
                         <h3 class="med-card-title">Разрыв кармической связи</h3>
                         <p class="med-card-text">
-                            Для освобождения от болезненной привязки к человеку, с которым отношения уже не приносят
-                            радости,
-                            но всё ещё тянут энергию. После прослушивания снижается эмоциональная зависимость, уходит
-                            навязчивая тяга
-                            и появляется ощущение внутренней свободы и лёгкости.
+                            Когда отношения как наркотик: невозможно ни быть вместе, ни отпустить. Качели, боль,
+                            «пришёл-ушёл», тянет как магнитом даже когда разрушает. Это кармическая связь. Медитация
+                            помогает разорвать её, забрать свою энергию обратно и выйти из этого цикла и наконец стать
+                            свободной.
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
@@ -350,9 +339,9 @@
                         </figure>
                         <h3 class="med-card-title">Исполнение желания</h3>
                         <p class="med-card-text">
-                            Эта медитация направлена на работу с конкретным желанием.
-                            Ты выбираешь чёткий запрос, в любой сфере жизни, и через медитативное состояние выстраиваешь
-                            с ним внутренний контакт.
+                            Медитация для работы с конкретным желанием в любой сфере: любовь, деньги, проекты, перемены.
+                            Помогает убрать внутренние «хочу, но не получится» и выстроить четкое намерение. Желание
+                            перестаёт быть мечтой и становится внутренним решением, которое запускает реализацию.
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
@@ -368,11 +357,9 @@
                         </figure>
                         <h3 class="med-card-title">Гармония внутри себя</h3>
                         <p class="med-card-text">
-                            Для восстановления внутреннего равновесия, когда всё разъезжается и нет сил держать фокус.
-                            После
-                            прослушивания вы становитесь собранной, спокойной и притягательной — именно в таком
-                            состоянии часто
-                            возвращаются бывшие, потому что ваша энергия снова звучит уверенно и ярко.
+                            Когда внутри разбалансировка, это чувствуют все вокруг. Эта медитация помогает восстановить
+                            равновесие, вернуть уверенность и ощущение своей ценности. В таком состоянии вы становитесь
+                            центром притяжения: люди тянутся, возможности приходят, а бывшие иногда возвращаются сами.
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
@@ -388,11 +375,9 @@
                         </figure>
                         <h3 class="med-card-title">Отпустить боль прошлого</h3>
                         <p class="med-card-text">
-                            Для тех, кто застрял в обидах, разочарованиях и старых историях. Медитация помогает мягко
-                            отпустить
-                            прошлые переживания, перестать возвращаться к ним мыслями. После прослушивания приходит
-                            ощущение
-                            внутреннего спокойствия и возможности двигаться дальше.
+                            Обиды, разочарования, предательства, всё это застревает внутри и не даёт жить. Эта медитация
+                            помогает отпустить старую боль, перестать прокручивать прошлое и наконец выдохнуть. После
+                            прослушивания становится легче, тише внутри, и появляется силы идти дальше.
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
