Fix nav bar aria labels

--- a/meditations.html
+++ b/meditations.html
@@ -46,16 +46,24 @@
             <nav id="mobile-menu">
                 <ul>
                     <li>
-                        <a href="index.html">Главная</a>
+                        <a href="index.html" aria-label="Go to homepage">
+                            Главная
+                        </a>
                     </li>
                     <li>
-                        <a href="#packs-list">packs</a>
+                        <a href="#packs-list" aria-label="Go to meditations packs">
+                            packs
+                        </a>
                     </li>
                     <li>
-                        <a href="#meditations-list">Медитации</a>
+                        <a href="#meditations-list" aria-label="Go to all meditations">
+                            Медитации
+                        </a>
                     </li>
                     <li>
-                        <a href="#contact">Контакт</a>
+                        <a href="#contact" aria-label="Go to contact section">
+                            Контакт
+                        </a>
                     </li>
                 </ul>
             </nav>
