--- a/meditations.html
+++ b/meditations.html
@@ -237,8 +237,8 @@
                             себя тем, что не даёт покоя.
                         </p>
                         <p class="med-card-price">3 000 ₽</p>
-                        <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
-                            Получить медитацию
+                        <a href="meditations/letting-go-of-anxious-thoughts.html" class="med-card-link">
+                            Узнать больше
                         </a>
                     </article>
 
