--- a/meditations.html
+++ b/meditations.html
@@ -56,7 +56,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#meditations-list" aria-label="Go to all meditations">
+                        <a href="#meditations.html" aria-label="Go to all meditations">
                             Медитации
                         </a>
                     </li>
@@ -486,9 +486,18 @@
         <div class="container med-footer-inner">
             <div>© 2025 Стук сердца by Suria</div>
             <div class="footer-nav">
-                <a href="#pack-list">Медитации</a>
-                <a href="index.html#services">Формат работы</a>
-                <a href="index.html#contact">Контакт</a>
+                <a href="index.html" aria-label="Go to homepage">
+                    Главная
+                </a>
+                <a href="#packs-list" aria-label="Go to meditations packs">
+                    packs
+                </a>
+                <a href="#meditations.html" aria-label="Go to all meditations">
+                    Медитации
+                </a>
+                <a href="#contact" aria-label="Go to contact section">
+                    Контакт
+                </a>
             </div>
         </div>
     </footer>
