--- a/meditations/letting-go-of-anxious-thoughts.html
+++ b/meditations/letting-go-of-anxious-thoughts.html
@@ -45,12 +45,12 @@
             <nav id="mobile-menu">
                 <ul>
                     <li>
-                        <a href="index.html" aria-label="Go to homepage">
+                        <a href="../index.html" aria-label="Go to homepage">
                             Главная
                         </a>
                     </li>
                     <li>
-                        <a href="meditations.html" aria-label="Go to all meditations">
+                        <a href="../meditations.html" aria-label="Go to all meditations">
                             Медитации
                         </a>
                     </li>
@@ -273,7 +273,7 @@
         <div class="container med-footer-inner">
             <div>© 2025 Стук сердца by Suria</div>
             <div class="footer-nav">
-                <a href="index.html" aria-label="Go to homepage">
+                <a href="../index.html" aria-label="Go to homepage">
                     Главная
                 </a>
                 <a href="meditations.html" aria-label="Go to all meditations">
