Fix title and content

--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Basic SEO -->
-    <title>Медитации Сурии — аудио-практики для исцеления души | Стук сердца</title>
+
+    <title>Сурия — энергетический практик и таро-терапевт 🖤 Стук сердца</title>
+
 
     <meta name="description"
         content="Медитации Сурии: аудио-практики для отпускания боли прошлого, разрыва кармических связей, восстановления энергии и открытия сердца для любви. Выберите медитацию или готовый набор под своё состояние.">
 
     <meta name="author" content="Сурия, энергетический практик и таро-терапевт">
     <meta name="keywords"
-        content="медитации Сурии, аудио медитации, энергетические медитации, отпускание прошлого, разрыв кармической связи, защита рода, очищение от негатива, баланс энергии, опора внутри себя, призыв новой любви, Стук сердца">
+        content="медитации Сурии, аудио медитации, энергетические медитации, отпускание прошлого, таро, таро-расклады, разрыв кармической связи, защита рода, очищение от негатива, баланс энергии, опора внутри себя, призыв новой любви, Стук сердца">
 
     <!-- Open Graph (social preview) -->
     <meta property="og:title" content="Медитации Сурии — аудио-практики для исцеления души">
     <meta property="og:description"
-        content="Пространство медитаций «Стук сердца»: готовые наборы и отдельные практики, которые помогают успокоить ум, отпустить прошлое, восстановить энергию и открыть сердце для новой любви.">
+        content="Пространство медитаций «Стук сердца»: готовые расклады и отдельные практики, которые помогают успокоить ум, отпустить прошлое, восстановить энергию и открыть сердце для новой любви.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://iuliiakonovalova.github.io/stukserdza/meditations.html">
     <meta property="og:image"
@@ -234,14 +236,14 @@
                                 <a href="#contact" class="product-link">Запросить чистку</a>
                             </article>
 
-                            <!-- Авторские таро-наборы -->
+                            <!-- Авторские таро-расклады -->
                             <article class="product-card">
-                                <h3 class="product-title">Авторские таро-наборы</h3>
+                                <h3 class="product-title">Авторские таро-расклады</h3>
                                 <p class="product-text">
                                     Авторские таро-расклады, составляемые персонально под любую вашу ситуацию и вопрос.
 
                                 </p>
-                                <a href="#contact" class="product-link">Узнать о наборах</a>
+                                <a href="#contact" class="product-link">Узнать о раскладах</a>
                             </article>
 
                             <!-- Медитации -->
