--- a/meditations.html
+++ b/meditations.html
@@ -8,8 +8,8 @@
     <meta name="author" content="Сурия, энергетический практик и таро-терапевт">
     <meta name="keywords"
         content="Сурия, таро, таролог, таро-терапевт, энергетический практик, Стук сердца, сердцебиение души, трансформация, духовное исцеление">
-    <title>Сурия — энергетический практик и таро-терапевт 🖤 Стук сердца</title>
 
+    <title>Медитации Сурии — аудио-практики для исцеления души | Стук сердца</title>
     <meta name="description"
         content="Сурия — энергетический практик и таро-терапевт. Стук сердца: путь трансформации души, расклады Таро и энергетическая поддержка для тех, кто проживает боль и ищет свет.">
 
