Fix title and content

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <div class="products-intro">
                     <h2 class="section-title">С чего вы можете начать</h2>
                     <p>
-                        ЗЗдесь вы можете выбрать формат, который лучше всего вам откликается: диагностика, энергочистка,
+                        Здесь вы можете выбрать формат, который лучше всего вам откликается: диагностика, энергочистка,
                         авторские таро-расклады, медитации и аудиопрограммы
                     </p>
                 </div>
